feat(common): add capability eras and Java 8 collection helpers
PlatformCapability era sets and ImmutableCollections are the shared
contract later 1.8–1.16.5 NMS modules will implement without touching
1.17+ runtime code.