@@ -6,6 +6,10 @@ import org.jspecify.annotations.Nullable;
 public final class TextValues {
     private TextValues() {}
 
+    public static boolean isBlank(@Nullable String value) {
+        return value == null || value.trim().isEmpty();
+    }
+
     public static @Nullable String trimToNull(@Nullable String value) {
         if (value == null) {
             return null;
@@ -15,6 +19,6 @@ public final class TextValues {
     }
 
     public static String orElseIfBlank(@Nullable String value, String fallback) {
-        return value == null || value.isBlank() ? fallback : value;
+        return value == null || value.trim().isEmpty() ? fallback : value;
     }
 }
